--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/nomopix/anaconda3/envs/py3/bin/python"
+    "python.pythonPath": "/Users/nomopix/anaconda3/envs/py3/bin/python",
+    "python.dataScience.jupyterServerURI": "local"
 }
